--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -42,4 +42,4 @@ jobs:
       - name: Run Training
         run: |
           source venv/bin/activate
-          python main.py
+          python net.py
