--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -37,6 +37,7 @@ jobs:
           source ~/.bashrc
           mamba create
           mamba activate
+          pip install torch
           #pip install -r requirements.txt
           
       - name: Run Training
