--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -38,6 +38,7 @@ jobs:
           mamba create
           mamba activate
           pip install torch
+          pip install torchvision
           #pip install -r requirements.txt
           
       - name: Run Training
